installation/ingress/traefik/examples/traefik-prefix-mid.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: tekui-stripprefix
  namespace: tekton-pipelines
spec:
  stripPrefix:
    prefixes:
      - /tekui
