installation/ingress/traefik/examples/t-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: mytraefikroute
  namespace: tekton-pipelines

spec:
  entryPoints:
    - web

  routes:
  - match: Host(`tekui.com`) && PathPrefix(`/tekui`)
    kind: Rule
    middlewares: 
      - name: tekui-stripprefix
        namespace: tekton-pipelines 
    services:
    - name: tekton-dashboard
      kind: Service
      port: 9097
